added dependency injection, code refactoring, added more endpoint in the swagger documentation
