# NodeJs/RENTALX/src/routes/specification.routes.ts
@@ -1,16 +1,15 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listSpecificationController } from "../modules/cars/useCases/listSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationController } from "../modules/cars/useCases/listSpecification/ListSpecificationController";
 
 const specificationRoutes = Router();
 
-specificationRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationController = new ListSpecificationController();
 
-specificationRoutes.get("/", (request, response) => {
-    return listSpecificationController.handle(request, response);
-});
+specificationRoutes.post("/", createSpecificationController.handle);
+
+specificationRoutes.get("/", listSpecificationController.handle);
 
 export { specificationRoutes };
